(fix) solved the problem with blue hover on projects portfolio using big-z-index class that sets with an isotope method

--- a/src/blocks/modules/main/main.scss
+++ b/src/blocks/modules/main/main.scss
@@ -85,6 +85,9 @@
     @include size(4);
     @include size-lg(6);
     @include size-sm(12);
+    &.big-z-index {
+        z-index: 9999;
+    }
     margin: 0.9375rem;
     position: relative;
     transition: none !important;
